# advent-of-code

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  build.rs  go.mod  pretty.fish  pretty.sh  problems.rs
2015/01/: 1.bash  1.c  1.cpp  1.go  1.js  1.py  2.bash  2.c  2.cpp  2.go  2.js  2.py  problem.txt
2015/02/: 1.bash  1.c  1.cpp  1.go  1.js  1.output  1.py  2.bash  2.c  2.cpp  2.go  2.js  2.output  2.py  problem.txt
2015/03/: 1.bash  1.c  1.cpp  1.go  1.js  1.py  2.bash  2.c  2.cpp  2.go  2.js  2.py  problem.txt
2015/04/: .gitignore  1.bash  1.c  1.cpp  1.go  1.js  1.py  2.bash  2.c  2.cpp  2.go  2.js  2.output  2.py  compile.sh  md5.c  md5.h  md5_precompute.c
2015/05/: 1.bash  1.c  1.cpp  1.go  1.js  1.py  2.bash  2.c  2.cpp  2.go  2.js  2.py  problem.txt
2015/06/: .gitignore  1.bash  1.c  1.cpp  1.go  1.js  1.py  2.bash  2.c  2.cpp  2.go  2.js  2.py  compile.sh  input_parser.c.re  input_parser.cpp.re  input_parser.h  input_parser.hpp  problem.txt
2015/07/: .gitignore  1.bash  1.c  1.cpp  1.go  1.js  1.py  2.bash  2.c  2.cpp  2.go  2.js  2.py  WireMesh.c  WireMesh.h  calculate.py  calculateSignal.js  circuit.bash  compile.sh  parse.js  parse.py  parseInstruction.c.re  parseInstruction.cpp.re  parseInstruction.js  parseInstruction.py  parser.h  parser.hpp  problem.txt  wire.cpp  wire.hpp
scripts/: fetch_input.sh  pretty.sh  setup_day.js  test.sh
src/: lib.rs  main.cc  main.rs
src/helpers/: md5.cc  md5.h  md5.rs
src/tests/: main.cc  main.rs
src/utils/: mod.rs  problems.h  problems.rs  solutions.h  solutions.rs
(+45 files in other folders)
